--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm run check-formatting
-    - run: npm run build
-    - run: npm test:ci
+    - run: cd frontend; npm install
+    - run: cd frontend; npm run check-formatting
+    - run: cd frontend; npm run build
+    - run: cd frontend; npm test:ci
