--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
 		"check-formatting": "prettier -uc \"**\""
 	},
 	"dependencies": {
+		"@emotion/react": "^11.13.3",
+		"@emotion/styled": "^11.13.0",
+		"@mui/material": "^6.1.7",
 		"next": "latest",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
