--- a/backend/deno.json
+++ b/backend/deno.json
@@ -4,6 +4,7 @@
 	},
 	"imports": {
 		"@oak/oak": "jsr:@oak/oak@^17.1.3",
+		"@tajpouria/cors": "jsr:@tajpouria/cors@^1.2.1",
 		"@std/assert": "jsr:@std/assert@1"
 	},
 	"fmt": {
