--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
 		"test": "jest --watch",
 		"test:ci": "jest --ci",
 		"format": "prettier -uw \"**\"",
+		"lint": "eslint .",
 		"check-formatting": "prettier -uc \"**\""
 	},
 	"dependencies": {
@@ -20,14 +21,18 @@
 		"swr": "^2.2.5"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.14.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.0.1",
+		"@types/eslint__js": "^8.42.3",
 		"@types/jest": "^29.5.14",
 		"@types/node": "22.9.0",
 		"@types/react": "18.2.45",
+		"eslint": "^9.14.0",
 		"jest": "29.7.0",
 		"jest-environment-jsdom": "29.7.0",
 		"prettier": "^3.3.3",
-		"typescript": "5.3.3"
+		"typescript": "^5.3.3",
+		"typescript-eslint": "^8.14.0"
 	}
 }
