--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
 		"@types/node": "22.9.0",
 		"@types/react": "18.2.45",
 		"eslint": "^9.14.0",
+		"globals": "^15.12.0",
 		"jest": "29.7.0",
 		"jest-environment-jsdom": "29.7.0",
 		"prettier": "^3.3.3",
