--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,12 +25,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - name: npm install
-        run: cd frontend; npm install
+      - name: npm ci
+        run: cd frontend; npm ci
       - name: check formatting with prettier
         run: cd frontend; npm run check-formatting
       - name: lint with eslint
-        run: cd frontend; npm run lint
+        run: cd frontend; npx eslint -v; npm run lint
       - name: nextjs build
         run: cd frontend; npm run build
       - name: run tests
