--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
 		"test": "jest --watch",
 		"test:ci": "jest --ci",
 		"format": "prettier -uw \"**\"",
-		"lint": "eslint .",
+		"lint": "next lint",
 		"check-formatting": "prettier -uc \"**\""
 	},
 	"dependencies": {
@@ -29,6 +29,7 @@
 		"@types/node": "22.9.0",
 		"@types/react": "18.2.45",
 		"eslint": "^9.14.0",
+		"eslint-config-next": "15.0.3",
 		"globals": "^15.12.0",
 		"jest": "29.7.0",
 		"jest-environment-jsdom": "29.7.0",
