--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 		"@eslint/js": "^9.14.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.0.1",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/eslint__js": "^8.42.3",
 		"@types/jest": "^29.5.14",
 		"@types/node": "22.9.0",
