--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -38,4 +38,5 @@ jobs:
         run: cd backend; deno lint
 
       - name: Run tests
-        run: cd backend; deno test -A
+        run: cd backend; deno test --allow-read --allow-env --trace-leaks
+
