--- a/backend/deno.json
+++ b/backend/deno.json
@@ -5,8 +5,14 @@
 	},
 	"imports": {
 		"@oak/oak": "jsr:@oak/oak@^17.1.3",
+		"@std/crypto": "jsr:@std/crypto@^1.0.3",
+		"@std/encoding": "jsr:@std/encoding@^1.0.5",
+		"@std/testing": "jsr:@std/testing@^1.0.5",
 		"@tajpouria/cors": "jsr:@tajpouria/cors@^1.2.1",
-		"@std/assert": "jsr:@std/assert@1"
+		"@std/assert": "jsr:@std/assert@1",
+		"@officeparser": "npm:officeparser",
+		"@djwt": "https://deno.land/x/djwt@v3.0.2/mod.ts",
+		"@dotenv": "https://deno.land/x/dotenv@v3.2.2/mod.ts"
 	},
 	"fmt": {
 		"useTabs": true
