--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
 	"description": "",
 	"main": "",
 	"scripts": {
+		"dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+		"dev:frontend": "cd frontend && npm run dev",
+		"dev:backend": "cd backend && deno run --allow-net --allow-read --allow-env main.ts",
 		"format": "prettier -uw \"**/*\""
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/file-saver": "^2.0.7",
+		"concurrently": "^9.1.0",
 		"prettier": "^3.3.3"
+	},
+	"dependencies": {
+		"docx": "^9.1.0",
+		"file-saver": "^2.0.5",
+		"jspdf": "^2.5.2"
 	}
 }
