--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
 		"@mui/material": "^6.1.7",
+		"docx": "^9.1.0",
+		"file-saver": "^2.0.5",
+		"jspdf": "^2.5.2",
 		"next": "latest",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -27,6 +30,7 @@
 		"@testing-library/react": "^16.0.1",
 		"@testing-library/user-event": "^14.5.2",
 		"@types/eslint__js": "^8.42.3",
+		"@types/file-saver": "^2.0.7",
 		"@types/jest": "^29.5.14",
 		"@types/node": "22.9.0",
 		"@types/react": "18.2.45",
