--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -38,5 +38,5 @@ jobs:
         run: cd backend; deno lint
 
       - name: Run tests
-        run: cd backend; deno test --allow-read --allow-env --trace-leaks
+        run: cd backend; deno task test
 
