--- a/backend/deno.json
+++ b/backend/deno.json
@@ -2,7 +2,7 @@
 	"tasks": {
 		"check": "deno fmt --check && deno lint && deno test",
 		"test": "deno test --allow-read --allow-env --env-file=local.env",
-		"dev": "deno run --allow-net --allow-env --watch main.ts"
+		"dev": "deno run --allow-net --allow-env --allow-read --env-file=local.env --watch main.ts"
 	},
 	"imports": {
 		"@oak/oak": "jsr:@oak/oak@^17.1.3",
@@ -13,7 +13,8 @@
 		"@std/assert": "jsr:@std/assert@1",
 		"@officeparser": "npm:officeparser",
 		"@djwt": "https://deno.land/x/djwt@v3.0.2/mod.ts",
-		"@dotenv": "https://deno.land/x/dotenv@v3.2.2/mod.ts"
+		"@dotenv": "https://deno.land/x/dotenv@v3.2.2/mod.ts",
+		"@natural": "npm:natural"
 	},
 	"fmt": {
 		"useTabs": true
