--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,11 @@
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
 		"@mui/material": "^6.1.7",
+		"ahooks": "^3.8.4",
 		"docx": "^9.1.0",
 		"file-saver": "^2.0.5",
 		"jspdf": "^2.5.2",
-		"ahooks": "^3.8.4",
-		"next": "latest",
+		"next": "^15.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"server-only": "^0.0.1",
@@ -39,6 +39,7 @@
 		"eslint-config-next": "15.0.3",
 		"globals": "^15.12.0",
 		"jest": "29.7.0",
+		"jest-canvas-mock": "^2.5.2",
 		"jest-environment-jsdom": "29.7.0",
 		"prettier": "^3.3.3",
 		"typescript": "^5.3.3",
