--- a/package.json
+++ b/package.json
@@ -12,13 +12,8 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/file-saver": "^2.0.7",
 		"concurrently": "^9.1.0",
 		"prettier": "^3.3.3"
 	},
-	"dependencies": {
-		"docx": "^9.1.0",
-		"file-saver": "^2.0.5",
-		"jspdf": "^2.5.2"
-	}
+	"dependencies": {}
 }
