--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,5 +33,7 @@ jobs:
         run: cd frontend; npm run lint
       - name: nextjs build
         run: cd frontend; npm run build
+      - name: install playwright
+        run: npx playwright install --with-deps
       - name: run tests
         run: cd frontend; npm run test:ci
