--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
 		"build": "next build",
 		"start": "next start",
 		"test": "jest --watch",
-		"test:ci": "jest --ci",
+		"test:ci": "jest --ci && npx playwright test -c e2e/playwright.config.ts",
+		"test:e2e": "npx playwright test -c e2e/playwright.config.ts",
 		"format": "prettier -uw \"**\"",
 		"lint": "next lint",
 		"check-formatting": "prettier -uc \"**\"",
@@ -27,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.14.0",
+		"@playwright/test": "^1.49.1",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.0.1",
 		"@testing-library/user-event": "^14.5.2",
@@ -41,6 +43,7 @@
 		"jest": "29.7.0",
 		"jest-canvas-mock": "^2.5.2",
 		"jest-environment-jsdom": "29.7.0",
+		"playwright": "^1.49.0",
 		"prettier": "^3.3.3",
 		"typescript": "^5.3.3",
 		"typescript-eslint": "^8.14.0"
